--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <h3><p>Not only people need a house<br>
   <q class="text">You can't change the world by helping one dog,
     but you will change the world for that one dog</q></p></h3>
-  <button type="button" class="btn btn-warning">Make a friend</button>
+  <a href="Dog" class="btn btn-warning" role="button" >Make a friend</a>
 </div>
 <div class="body" style="background-color: #612800;">
   <h2 class="abt">About the shelter</h2>
