--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3  border-bottom box-shadow">
   <h5 class="my-0 mr-md-auto font-weight-normal">Cat&Dog</h5>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2" routerLink="/">About</a>
+    <a class="p-2" routerLink="/">Home</a>
     <a class="p-2" routerLink="/Dog">Dogs</a>
     <a class="p-2" routerLink="/Cat">Cats</a>
     <a class="p-2" routerLink="/Volunteer">Volunteer</a>
-    <a class="p-2" href="#">Gallery</a>
+
   </nav>
-  <a class="btn btn-outline-light" routerLink="/login">Sign up</a>
+  <a class="btn btn-outline-light" routerLink="/Login">Sign up</a>
 </div>
