--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -4,7 +4,7 @@
     <img class="card-img" src="{{dog.image}}" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{dog.name}}</h5>
-      <p class="card-text">{{dog.des}}</p> <button type="button" class="btn btn-warning">Learn more</button>
+      <p class="card-text">{{dog.des}}</p> <button type="button" class="btn btn-warning">Save</button>
 
     </div>
   </div>
