--- a/src/app/catchild/catchild.component.html
+++ b/src/app/catchild/catchild.component.html
@@ -4,7 +4,7 @@
       <img class="card-img" src="{{cat.image}}" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">{{cat.name}}</h5>
-        <p class="card-text">{{cat.des}}</p> <button type="button" class="btn btn-warning">Learn more</button>
+        <p class="card-text">{{cat.des}}</p> <button type="button" class="btn btn-warning">Save</button>
       </div>
     </div>
   </div>
