--- a/src/app/volunteer/volunteer.component.html
+++ b/src/app/volunteer/volunteer.component.html
@@ -47,7 +47,7 @@
         <div class="form-group">
           <label class="control-label col-sm-2" for="email">Contact number:</label>
           <div class="col-sm-10">
-            <input type="number" class="form-control" id="number" placeholder="Enter number" name="number" [(ngModel)]="user.number">
+            <input type="text" id = "number" class="form-control" data-format="+7 (ddd) ddd-dddd" [(ngModel)]="user.number">
           </div>
       </div>
       <div class="form-group">
@@ -58,7 +58,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Sign up</button>
         </div>
       </div>
     </div>
